--- a/playbooks/files/pihole/05-pihole-custom-cname.conf
+++ b/playbooks/files/pihole/05-pihole-custom-cname.conf
@@ -1,3 +1,6 @@
 cname=pihole.local.abbottland.io,bananapi.local.abbottland.io
 cname=traefik.local.abbottland.io,bananapi.local.abbottland.io
 cname=dashboard.local.abbottland.io,bananapi.local.abbottland.io
+cname=portal.nas.local.abbottland.io,bananapi.local.abbottland.io
+cname=registry.nas.local.abbottland.io,bananapi.local.abbottland.io
+cname=portainer.nas.local.abbottland.io,bananapi.local.abbottland.io
