--- a/playbooks/files/traefik/registry.nas.local.yml
+++ b/playbooks/files/traefik/registry.nas.local.yml
@@ -3,15 +3,15 @@ http:
     to-roomofrequirement-https:
       entryPoints:
         - "https"
-      rule: "Host(`roomofrequirement.local.abbottland.io`)"
+      rule: "Host(`registry.nas.local.abbottland.io`)"
       middlewares:
         - secured
       service: roomofrequirement
-      tls: {}
+      tls: {} 
 
   services:
     roomofrequirement:
       loadBalancer:
         servers:
-        - url: http://192.168.4.124:9000
+        - url: http://192.168.4.124:5000
         passHostHeader: true
