Setup docker container registry on nas

--- a/host_vars/bananapi.yml
+++ b/host_vars/bananapi.yml
@@ -16,3 +16,5 @@ traefik_config_dir: /home/pi/app_config/traefik
 traefik_dynamic_config_dir: /home/pi/app_config/traefik/conf.d
 
 pihole_config_dir: /home/pi/app_config/pihole
+
+docker_registry_mirror_host: https://registry.nas.local.abbottland.io
