--- a/playbooks/files/traefik/registry.nas.local.yml
+++ b/playbooks/files/traefik/registry.nas.local.yml
@@ -1,5 +1,14 @@
 http:
   routers:
+    to-registry-ui-nas-https:
+      entryPoints:
+        - "https"
+      rule: "Host(`registry-ui.nas.local.abbottland.io`)"
+      middlewares:
+        - secured
+      service: registry-ui-nas
+      tls: {} 
+
     to-registry-nas-https:
       entryPoints:
         - "https"
@@ -10,8 +19,13 @@ http:
       tls: {} 
 
   services:
+    registry-ui-nas:
+      loadBalancer:
+        servers:
+        - url: http://192.168.4.124:5001
+        passHostHeader: true
     registry-nas:
       loadBalancer:
         servers:
-        - url: http://192.168.4.124:5000
+        - url: http://192.168.4.124:5002
         passHostHeader: true
