--- a/roles/home.docker-registry/tasks/main.yml
+++ b/roles/home.docker-registry/tasks/main.yml
@@ -3,6 +3,16 @@
     state: directory
     mode: '0755'
 
+- ansible.builtin.file:
+    path: "{{ docker_registry_config_dir }}"
+    state: directory
+    mode: '0755'
+
+- name: Copy config file to remote
+  register: conf
+  ansible.builtin.copy:
+    src: config.yml
+    dest: "{{ docker_registry_config_dir }}/config.yml"
 
 - community.docker.docker_compose:
     project_name: registry
@@ -15,6 +25,26 @@
           image: registry:2
           container_name: registry
           ports:
-            - 5000:5000
+            # Uncertain why port 5000 does not work on host.
+            - 5002:5000
           volumes:
             - '{{ docker_registry_storage_dir }}:/var/lib/registry'
+            - '{{ docker_registry_config_dir }}/config.yml:/etc/docker/registry/config.yml'
+
+        registry_ui:
+          restart: always
+          image: joxit/docker-registry-ui:latest
+          container_name: registry_ui
+          ports:
+            - 5001:80
+          environment:
+            - REGISTRY_TITLE=Homelab Private Docker Registry
+            - REGISTRY_URL=https://registry.nas.local.abbottland.io
+            - SINGLE_REGISTRY=true
+            - DELETE_IMAGES=true
+
+- name: restart container
+  docker_container:
+    name: registry
+    restart: true
+  when: conf.changed 
