--- a/roles/home.docker_daemon/tasks/main.yml
+++ b/roles/home.docker_daemon/tasks/main.yml
@@ -17,6 +17,13 @@
     regexp: 'IP_ADDRESS'
     replace: "{{ip_address}}"
 
+- name: Replace ip address
+  replace:
+    path: /tmp/daemon.json
+    regexp: 'DOCKER_REGISTRY_MIRROR_HOST'
+    replace: "{{docker_registry_mirror_host}}"
+
+
 - name: Replace existing docker daemon.json
   ansible.builtin.copy:
     remote_src: true
