--- a/host_vars/room_of_requirement.yml
+++ b/host_vars/room_of_requirement.yml
@@ -14,6 +14,7 @@ verdaccio_plugins_dir: /volume1/Docker/verdaccio/plugins
 verdaccio_user: pbabbott
 verdaccio_pw: "{{ verdaccio.pbabbott_password }}"
 
+docker_registry_config_dir: /volume1/Docker/registry/config
 docker_registry_storage_dir: /volume1/Docker/registry/storage
 
 handbrake_config_dir: /volume1/Docker/handbrake/config
