--- a/playbooks/005_artifact_repositories.yml
+++ b/playbooks/005_artifact_repositories.yml
@@ -4,8 +4,6 @@
   roles:
     - role: home.docker-registry
 
-# # TODO: https://joxit.dev/docker-registry-ui/
-
 - name: Setup Docker Registry
   become: true
   hosts: 
@@ -14,5 +12,9 @@
   roles:
     - role: home.docker_daemon
       ip_address: "{{ ansible_host }}"
-      # docker_registry_mirror_host: "{{docker_registry_mirror_host}}"
     
+
+- name: Setup NPM Registry on NAS 
+  hosts: room_of_requirement
+  roles:
+    - role: home.verdaccio
