--- a/roles/home.dashy/files/conf.yml
+++ b/roles/home.dashy/files/conf.yml
@@ -9,29 +9,6 @@ pageInfo:
   navLinks: []
   footerText: ''
 sections:
-  - name: Banana Pi
-    icon: banana-svgrepo-com.svg
-    displayData:
-      sortBy: default
-      rows: 1
-      cols: 1
-      collapsed: false
-      hideForGuests: false
-    items:
-      - title: Pi Hole
-        description: Network Ad-blocking & DNS
-        icon: hl-pihole
-        url: https://pihole.local.abbottland.io/
-        target: newtab
-        statusCheck: true
-        id: 0_794_pihole
-      - title: Traefik
-        description: Reverse proxy / Gateway
-        icon: hl-traefik
-        url: https://traefik.local.abbottland.io/
-        target: newtab
-        statusCheck: true
-        id: 1_794_traefik
   - name: Raspberry Pi
     icon: hl-raspberrypi
     displayData:
@@ -114,26 +91,24 @@ sections:
         target: newtab
         statusCheck: true
         id: 0_1859_asustor
-      - title: Docker Registry
+      - title: Docker Registry UI
         description: Container Registry
         icon: hl-docker
-        url: https://registry.nas.local.abbottland.io
+        url: https://registry-ui.nas.local.abbottland.io
         target: newtab
         statusCheck: true
-        statusCheckUrl: http://192.168.4.124:5000/
-        id: 1_1859_dockerregistry
+        id: 1_1859_dockerregistryui
       - title: Plex
         description: Plex Media Server
         icon: hl-plex
-        url: https://plex.abbottland.io
+        url: https://plex.abbottland.io/identity
         target: newtab
         statusCheck: true
-        statusCheckUrl: http://192.168.4.124:32400/identity
         id: 2_1859_plex
       - title: Verdaccio
         description: NPM Registry & Proxy
         icon: verdaccio.svg
-        url: http://192.168.4.124:4873/
+        url: https://verdaccio.nas.local.abbottland.io
         target: newtab
         statusCheck: true
         id: 3_1859_verdaccio
@@ -143,7 +118,6 @@ sections:
         url: https://portainer.nas.local.abbottland.io
         target: newtab
         statusCheck: true
-        statusCheckAllowInsecure: true
         id: 4_1859_portainer
       - title: Metrics
         description: Exporter for NAS via docker
@@ -159,6 +133,29 @@ sections:
         target: newtab
         statusCheck: true
         id: 6_1859_handbrake
+  - name: Banana Pi
+    icon: banana-svgrepo-com.svg
+    displayData:
+      sortBy: default
+      rows: 1
+      cols: 1
+      collapsed: false
+      hideForGuests: false
+    items:
+      - title: Pi Hole
+        description: Network Ad-blocking & DNS
+        icon: hl-pihole
+        url: https://pihole.local.abbottland.io/
+        target: newtab
+        statusCheck: true
+        id: 0_794_pihole
+      - title: Traefik
+        description: Reverse proxy / Gateway
+        icon: hl-traefik
+        url: https://traefik.local.abbottland.io/
+        target: newtab
+        statusCheck: true
+        id: 1_794_traefik
   - name: Elder Wand
     icon: corsair-svgrepo-com.svg
     displayData:
