--- a/playbooks/005_artifact_repositories.yml
+++ b/playbooks/005_artifact_repositories.yml
@@ -4,7 +4,7 @@
   roles:
     - role: home.docker-registry
 
-- name: Setup Docker Registry
+- name: Setup Docker Registry as pull through cache
   become: true
   hosts: 
     - bananapi
@@ -13,8 +13,8 @@
     - role: home.docker_daemon
       ip_address: "{{ ansible_host }}"
     
-
 - name: Setup NPM Registry on NAS 
   hosts: room_of_requirement
   roles:
     - role: home.verdaccio
+
