--- a/files/.npmrc
+++ b/files/.npmrc
@@ -1,3 +1,3 @@
-registry="http://192.168.4.124:4873"
+registry="${NPM_REGISTRY}"
 always-auth=true
-//192.168.4.124:4873/:_authToken="${NPM_TOKEN}"
+//verdaccio.local.abbottland.io/:_authToken="${NPM_TOKEN}"
