--- a/host_vars/rpi.yml
+++ b/host_vars/rpi.yml
@@ -1,11 +1,8 @@
 host_puid: "1000"
 host_pgid: "1000"
-host_tz: "America/Los_Angeles"
 
 dns_nameservers:
   - "192.168.4.144"
-  # - "75.75.75.75"
-  # - "75.75.76.76"
 
 pip_install_packages:
   - docker
@@ -17,6 +14,8 @@ backup_azure_password: "{{ azure.homeSPN.password }}"
 backup_azure_tenant: "{{ azure.homeSPN.tenant }}"
 backup_azure_subscriptionId: "07619e8e-01a2-4b48-9d9c-281f290d3a37"
 
+
+# TODO: move this into new backup container project
 backup_jobs:
   - path: /home/pi/homeassistant_data
     dest: "/home/pi/homeassistant_data_{{ansible_date_time.date}}.tar.gz"
@@ -34,4 +33,3 @@ backup_jobs:
     dest: "/home/pi/drone_data_{{ansible_date_time.date}}.tar.gz"
     job_name: drone_data
 
-docker_registry_mirror_host: https://registry.nas.local.abbottland.io
