--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -2,6 +2,9 @@ host_tz: "America/Los_Angeles"
 
 docker_registry_mirror_host: https://registry.nas.local.abbottland.io
 
+drone_server_host: drone.abbottland.io
+drone_user_filter: pbabbott
+
 verdaccio_public_url: https://verdaccio.nas.local.abbottland.io
 verdaccio_user: pbabbott
 verdaccio_pw: "{{ verdaccio.pbabbott_password }}"
