--- a/roles/home.drone-server/tasks/main.yml
+++ b/roles/home.drone-server/tasks/main.yml
@@ -1,5 +1,5 @@
 - ansible.builtin.file:
-    path: /home/pi/drone_data
+    path: "{{ drone_data_dir}}"
     state: directory
     mode: '0755'  
 
@@ -8,10 +8,6 @@
     
     definition:
       version: '3'
-      networks:
-        default:
-          name: lsio
-          external: true
       services:
         drone_server:
           container_name: drone
@@ -20,11 +16,11 @@
             DRONE_GITHUB_CLIENT_ID: "{{ drone.github_client_id }}"
             DRONE_GITHUB_CLIENT_SECRET: "{{ drone.github_client_secret }}"
             DRONE_RPC_SECRET: "{{ drone.shared_secret }}"
-            DRONE_SERVER_HOST: drone.abbottland.io
+            DRONE_SERVER_HOST: "{{ drone_server_host }}"
             DRONE_SERVER_PROTO: http
-            DRONE_USER_FILTER: pbabbott
+            DRONE_USER_FILTER: "{{ drone_user_filter }}"
           volumes:
-            - /home/pi/drone_data:/data
+            - "{{ drone_data_dir}}:/data"
           restart: unless-stopped
           ports:
             - 9926:80
