--- a/host_vars/rpi.yml
+++ b/host_vars/rpi.yml
@@ -15,6 +15,7 @@ backup_azure_tenant: "{{ azure.homeSPN.tenant }}"
 backup_azure_subscriptionId: "07619e8e-01a2-4b48-9d9c-281f290d3a37"
 
 drone_data_dir: /home/pi/app_config/drone/data
+drone_runner_name: rpi-runner
 
 # TODO: move this into new backup container project
 backup_jobs:
