--- a/roles/home.drone-docker-runner/tasks/main.yml
+++ b/roles/home.drone-docker-runner/tasks/main.yml
@@ -4,20 +4,16 @@
     
     definition:
       version: '3'
-      networks:
-        default:
-          name: lsio
-          external: true
       services:
         drone_server:
           container_name: drone_runner
           image: drone/drone-runner-docker:1
           environment:
             DRONE_RPC_PROTO: https
-            DRONE_RPC_HOST: drone.abbottland.io
+            DRONE_RPC_HOST: "{{ drone_server_host }}"
             DRONE_RPC_SECRET: "{{ drone.shared_secret }}"
             DRONE_RUNNER_CAPACITY: 2
-            DRONE_RUNNER_NAME: rpi-runner
+            DRONE_RUNNER_NAME: "{{drone_runner_name}}"
           restart: always
           ports:
             - 3000:3000
