--- a/playbooks/005_artifact_repositories.yml
+++ b/playbooks/005_artifact_repositories.yml
@@ -18,3 +18,53 @@
   roles:
     - role: home.verdaccio
 
+- name: Get Verdaccio Token
+  hosts:
+    - room_of_requirement
+  tasks:
+    - name: Get Verdaccio Token
+      ansible.builtin.uri:
+        url: "{{verdaccio_public_url}}/-/user/org.couchdb.user:{{verdaccio_user}}"
+        method: PUT
+        body_format: json
+        status_code:
+          - 201
+        user: "{{ verdaccio_user }}"
+        password: "{{ verdaccio_pw }}"
+        force_basic_auth: true
+        headers:
+          Content-Type: application/json
+        body: '{"name":"{{ verdaccio_user }}","password":"{{ verdaccio_pw }}"}'
+        return_content: true
+      register: token_response
+    - name: Set Token
+      ansible.builtin.set_fact:
+        verdaccio_token: "{{(token_response.content | from_json).token }}"
+    - debug:
+        msg: "Response: {{verdaccio_token}}"
+        
+- name: Configure elder_wand to connect to registry
+  hosts: elder_wand
+  tasks:
+    - name: Ping host
+      win_ping: {}
+
+    - name: Copy a single file
+      win_copy:
+        src: ./files/.npmrc
+        dest: C:\Users\pbabb\.npmrc
+
+    - name: Set an environment variable for machine (NPM_REGISTRY)
+      win_environment:
+        state: present
+        name: NPM_REGISTRY
+        value: "{{ verdaccio_public_url }}"
+        level: machine
+
+    - name: Set an environment variable for machine (NPM_TOKEN)
+      win_environment:
+        state: present
+        name: NPM_TOKEN
+        value: "{{ hostvars['room_of_requirement'].verdaccio_token }}"
+        level: machine
+
