--- a/playbooks/006_ci_cd.yml
+++ b/playbooks/006_ci_cd.yml
@@ -1,52 +1,7 @@
-# - name: Get Verdaccio Token
-#   hosts:
-#     - room_of_requirement
-#   tasks:
-#     - name: Get Verdaccio Token
-#       ansible.builtin.uri:
-#         url: "{{verdaccio_public_url}}/-/user/org.couchdb.user:{{verdaccio_user}}"
-#         method: PUT
-#         body_format: json
-#         status_code:
-#           - 201
-#         user: "{{ verdaccio_user }}"
-#         password: "{{ verdaccio_pw }}"
-#         force_basic_auth: true
-#         headers:
-#           Content-Type: application/json
-#         body: '{"name":"{{ verdaccio_user }}","password":"{{ verdaccio_pw }}"}'
-#         return_content: true
-#       register: token_response
-#     - name: Set Token
-#       ansible.builtin.set_fact:
-#         verdaccio_token: "{{(token_response.content | from_json).token }}"
-#     - debug:
-#         msg: "Response: {{verdaccio_token}}"
-
-
 - name: Drone Docker Installations on RPI (not root)
   hosts: rpi
   roles:
     - role: home.drone-server
     - role: home.drone-docker-runner
 
-# TODO: figure out how to load secrets into drone automatically.
-
-# - name: Configure elder_wand
-#   hosts: elder_wand
-#   tasks:
-#     - name: Ping host
-#       win_ping: {}
-
-#     - name: Copy a single file
-#       win_copy:
-#         src: ../files/.npmrc
-#         dest: C:\Users\pbabb\.npmrc
-
-#     - name: Set an environment variable for machine
-#       win_environment:
-#         state: present
-#         name: NPM_TOKEN
-#         value: "{{ verdaccio.pbabbott_token }}"
-#         level: machine
-
+# TODO: Setup elder_wand drone configuration with ansible.
