--- a/playbooks/009_development.yml
+++ b/playbooks/009_development.yml
@@ -1,3 +1,8 @@
+- name: Configure NAS 
+  hosts: room_of_requirement
+  roles:
+    - role: home.shell_config
+
 - name: Install items to localhost with sudo
   become: true
   hosts: localhost
