--- a/playbooks/007_docker_apps.yml
+++ b/playbooks/007_docker_apps.yml
@@ -1,17 +1,13 @@
-# - name: Configure NAS 
-#   hosts: room_of_requirement
-#   roles:
-#     - role: home.handbrake
+- name: Configure NAS 
+  hosts: room_of_requirement
+  roles:
+    - role: home.handbrake
 
 - name: Docker Installations on RPI (not root)
   hosts: rpi
   roles:
-    # - role: home.dashy
+    - role: home.dashy
     - role: home.mealie
 #     - role: home.portainer
-
-#     - role: home.prometheus-server
-    
-#     - role: home.grafana
 #     - role: home.home-assistant
     
