--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -5,6 +5,7 @@ docker_registry_mirror_host: https://registry.nas.local.abbottland.io
 drone_server_host: drone.abbottland.io
 drone_user_filter: pbabbott
 
-verdaccio_public_url: https://verdaccio.nas.local.abbottland.io
+verdaccio_public_proto: https
+verdaccio_public_url: verdaccio.nas.local.abbottland.io
 verdaccio_user: pbabbott
 verdaccio_pw: "{{ verdaccio.pbabbott_password }}"
