--- a/playbooks/files/.npmrc
+++ b/playbooks/files/.npmrc
@@ -1,3 +1,3 @@
 registry="${NPM_REGISTRY_PROTO}://${NPM_REGISTRY}"
 always-auth=true
-//${NPM_REGISTRY}/:_authToken="${NPM_TOKEN}"
+//verdaccio.nas.local.abbottland.io/:_authToken="${NPM_TOKEN}"
